--- a/_posts/08march2022.md
+++ b/_posts/08march2022.md
@@ -1,6 +1,5 @@
 ---
 published: false
 ---
-## A New Post
+# another dollar
 
-Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
